<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center_horizontal">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:orientation="horizontal"
		android:layout_marginTop="20dp">
		<TextView
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/username" />
		<EditText
			android:id="@+id/username"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:orientation="horizontal">
		<TextView
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/password" />
		<EditText
			android:id="@+id/password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:orientation="horizontal"
		android:gravity="center_horizontal">
		<Button
			android:id="@+id/save"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="@string/login" />
		<Button
			android:id="@+id/clear"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="@string/logout" />
	</LinearLayout>


</LinearLayout>
